fix(UserProfile.css): improve ui for dark mode

--- a/src/pages/UserProfile/UserProfile.css
+++ b/src/pages/UserProfile/UserProfile.css
@@ -7,7 +7,7 @@
 }
 
 .profile-card {
-  background: #ffffff;
+  background-color: var(--app-fill-color);
   padding: 30px 25px;
   margin: 2vh 2vw;
   border-radius: 12px;
@@ -33,19 +33,7 @@
   border: 2px solid #007bff;
 }
 
-.profile-card h2 {
-  color: #333;
-}
-
 .profile-info {
   text-align: left;
-}
-
-.profile-info p {
-  font-size: 15px;
-  color: #555;
-}
-
-.profile-info strong {
-  color: #222;
+  list-style: none;
 }
